Fix: Correct ethers.js CDN URL

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tic Tac Toe - Status Network</title>
     <link rel="stylesheet" href="style.css">
     <!-- Include ethers.js library -->
-    <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js" type="application/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js" integrity="sha512-FDcVY+g7vcZvxeZd3vf4y3RZdiEWplzzMsUoTTXN5NVhqlAPqEXjxeRdG8irAWyg+3SsgFZQlpSq7flUDY/VBQ==" crossorigin="anonymous" referrerpolicy="no-referrer" type="application/javascript"></script>
 </head>
 <body>
     <h1>Tic Tac Toe on Status Network</h1>
