Fix: Load ethers.js before script.js

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe - Status Network</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Include ethers.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js" integrity="sha512-FDcVY+g7vcZvxeZd3vf4y3RZdiEWplzzMsUoTTXN5NVhqlAPqEXjxeRdG8irAWyg+3SsgFZQlpSq7flUDY/VBQ==" crossorigin="anonymous" referrerpolicy="no-referrer" type="application/javascript"></script>
+    <!-- Ethers.js will be included before script.js in the body -->
 </head>
 <body>
     <h1>Tic Tac Toe on Status Network</h1>
@@ -26,6 +25,9 @@
     <button id="connect-wallet-btn">Connect Wallet</button>
     <button id="reset-btn" style="display: none;">Play Again</button>
 
+    <!-- Include ethers.js library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js" integrity="sha512-FDcVY+g7vcZvxeZd3vf4y3RZdiEWplzzMsUoTTXN5NVhqlAPqEXjxeRdG8irAWyg+3SsgFZQlpSq7flUDY/VBQ==" crossorigin="anonymous" referrerpolicy="no-referrer" type="application/javascript"></script>
+    <!-- Include your game script -->
     <script src="script.js"></script>
 </body>
 </html> 
