--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button id="reset-btn" style="display: none;">Play Again</button>
 
     <!-- Include ethers.js library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js" integrity="sha512-FDcVY+g7vcZvxeZd3vf4y3RZdiEWplzzMsUoTTXN5NVhqlAPqEXjxeRdG8irAWyg+3SsgFZQlpSq7flUDY/VBQ==" crossorigin="anonymous" referrerpolicy="no-referrer" type="application/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js" type="application/javascript"></script>
     <!-- Include your game script -->
     <script src="script.js"></script>
 </body>
